test/function.err

Error at line 173:
			if(arraya[inta] != 1)
			                     ^ : type mismatch != 
